Adicionado as classes AgendaController e AgendaHelper

--- a/src/View/Agenda.form
+++ b/src/View/Agenda.form
@@ -2,7 +2,7 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -147,15 +147,10 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JComboBox" name="TextCliente">
+    <Component class="javax.swing.JComboBox" name="JComboBoxCliente">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Alan"/>
-            <StringItem index="1" value="Afonso"/>
-            <StringItem index="2" value="Abigail"/>
-            <StringItem index="3" value="Alexandro"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -167,17 +162,17 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JComboBox" name="TextServico">
+    <Component class="javax.swing.JComboBox" name="JComboBoxServico">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Barba"/>
-            <StringItem index="1" value="Barba + Corte"/>
-            <StringItem index="2" value="Corte"/>
-            <StringItem index="3" value=" "/>
+          <StringArray count="1">
+            <StringItem index="0" value=" "/>
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="JComboBoxServicoItemStateChanged"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -282,49 +277,14 @@
         <Component class="javax.swing.JTable" name="TableAgendamentos">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="4">
-                <Column editable="true" title="Id" type="java.lang.Object">
-                  <Data value="1"/>
-                  <Data value="2"/>
-                  <Data value="3"/>
-                  <Data value="4"/>
-                </Column>
-                <Column editable="true" title="Cliente" type="java.lang.Object">
-                  <Data value="Alan"/>
-                  <Data value="Abigail"/>
-                  <Data value="Pedro"/>
-                  <Data value="Teste"/>
-                </Column>
-                <Column editable="true" title="Servi&#xe7;o" type="java.lang.Object">
-                  <Data value="Corte"/>
-                  <Data value="Barba"/>
-                  <Data value="Barba"/>
-                  <Data value="Barba + Corte"/>
-                </Column>
-                <Column editable="true" title="Valor" type="java.lang.Object">
-                  <Data value="10"/>
-                  <Data value="20"/>
-                  <Data value="20"/>
-                  <Data value="30"/>
-                </Column>
-                <Column editable="true" title="Data" type="java.lang.Object">
-                  <Data value="22/04/2018"/>
-                  <Data value="22/04/2018"/>
-                  <Data value="23/04/2018"/>
-                  <Data value="23/04/2018"/>
-                </Column>
-                <Column editable="true" title="Hora" type="java.lang.Object">
-                  <Data value="08:00"/>
-                  <Data value="09:00"/>
-                  <Data value="08:00"/>
-                  <Data value="09:00"/>
-                </Column>
-                <Column editable="true" title="Observa&#xe7;&#xe3;o" type="java.lang.Object">
-                  <Data value=""/>
-                  <Data value="Pode se Atrazar um pouco"/>
-                  <Data value="null"/>
-                  <Data value="null"/>
-                </Column>
+              <Table columnCount="7" rowCount="0">
+                <Column editable="true" title="Id" type="java.lang.Object"/>
+                <Column editable="true" title="Cliente" type="java.lang.Object"/>
+                <Column editable="true" title="Servi&#xe7;o" type="java.lang.Object"/>
+                <Column editable="true" title="Valor" type="java.lang.Object"/>
+                <Column editable="true" title="Data" type="java.lang.Object"/>
+                <Column editable="true" title="Hora" type="java.lang.Object"/>
+                <Column editable="true" title="Observa&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
